risolto finalmente sistema autoagg bya, ora usa processbuilder di java7. aggiunto anche il log con log4j